--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,96 @@
 .App {
+font-family: futura;
+
+}
+
+.Navbar{
+  position: fixed;
+  z-index: 1;
+  background-color:rgb(255, 255, 255);
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.247);
+  color:rgb(0, 110, 255);
+  width:100%;
+  text-align:center;
+  height:100px;
+}
+
+.Navbar div{
+  background-color:none;
+  margin-top: 25px
+}
+
+.Navbar div h1{
+  font-size: 4rem;
+  font-weight:bold;
+}
+
+.bodyInfo{
+  display:flex;
+  justify-content: flex-start;
+  top: 100px;
+  padding-top: 100px;
+  position: relative;
+  background: rgb(0,255,181);
+  background: linear-gradient(0deg, rgb(62, 146, 255) 0%, rgb(255, 255, 255) 100%);
+}
+
+.list{
+  margin-left: 20vw;
+}
+
+.list div ul{
+  list-style-type: none;
+}
+
+.list div ul li{
+  list-style-type: none;
+}
+
+
+.linkCountry{
+  text-decoration: none;
+}
+
+.linkCountry div{
+
+  background-color: rgb(0, 110, 255);
+  border: 1px solid none;
+  width: 200px;
+  height: 100px;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  padding-top: 20px;
   color: white;
+  margin-top: 1px;
+  border-radius:5px;
+  transition: all 0.2s;
 }
 
-.App-link {
-  color: #61dafb;
+.linkCountry div:hover{
+
+  background-color: rgba(0, 110, 255, 0);
+  border: 1px solid rgb(0, 110, 255);
+  color: rgb(0, 110, 255);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.linkCountry h3{
+  font-size:1rem;
+}
+
+.detailContainer{
+  background-color: rgb(255, 255, 255);
+  border: 1px solid rgb(0, 110, 255);
+  width: 500px;
+  height: 500px;
+  text-align: center;
+  padding-top: 20px;
+  color: rgb(0, 110, 255);
+  margin-top: 1px;
+  border-radius:5px;
+  transition: all 0.2s;
+  position: fixed
+}
+
+.borderList{
+  list-style-type: none;
 }
