--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,15 @@
   }
 }
 
+.link {
+  text-decoration: none;
+}
+
+.flag {
+  width: 25%;
+  height: 100px;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
