--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  margin-left: 20px;
 }
 
 .App-logo {
@@ -28,11 +29,15 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
+.navbar-brand {
+  margin-left: 20px;
+}
+
+/*@keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
   }
-}
+}*/ ;
