--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,18 @@
   color: #61dafb;
 }
 
+.country-scroll {
+  max-height: 90vh; 
+  overflow: scroll;
+  overflow-x:hidden;
+  display: flex;
+  flex-direction: column;
+}
+
+.col-7 {
+  float: right;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
