--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+
+.page-container{
+  display: flex;
+  justify-content: space-evenly;
+  
+  margin-top: 5%;
+}
